[gd_scene load_steps=17 format=3 uid="uid://bclwmdmwy3ulq"]

[ext_resource type="Script" path="res://title_menu.gd" id="1_uk0m3"]
[ext_resource type="Script" path="res://MainMenuButtonScript.gd" id="2_aboyv"]
[ext_resource type="FontFile" uid="uid://dh2eg256uhspn" path="res://Assets/ui/Montserrat-ExtraBold.ttf" id="2_bg8yp"]
[ext_resource type="PackedScene" uid="uid://cocuk7i0or47k" path="res://tileset1.tscn" id="2_p8oyj"]
[ext_resource type="Texture2D" uid="uid://b6jawklesff3b" path="res://Assets/ui/characters.png" id="3_a8bnj"]
[ext_resource type="TileSet" uid="uid://ckivqkuoxougm" path="res://tileset2.tres" id="3_mm5at"]
[ext_resource type="PackedScene" uid="uid://1d83s1ts0qdy" path="res://coin.tscn" id="5_vlt85"]
[ext_resource type="Script" path="res://FadeIn.gd" id="6_2db4k"]
[ext_resource type="PackedScene" uid="uid://behsg1e0cuu2j" path="res://enemy.tscn" id="6_4c1oh"]
[ext_resource type="PackedScene" uid="uid://c7u7oston0xow" path="res://fly_enemy.tscn" id="7_o3b0x"]
[ext_resource type="PackedScene" uid="uid://bc3yabmsst5u2" path="res://moving_background.tscn" id="10_emons"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3gdmq"]
bg_color = Color(0.592157, 0.815686, 0.988235, 0.0901961)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0of38"]

[sub_resource type="Animation" id="Animation_bsdhu"]
resource_name = "Fade_In"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeIn:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.12549, 0.12549, 0.12549, 0), Color(0.12549, 0.12549, 0.12549, 1)]
}

[sub_resource type="Animation" id="Animation_u50u7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeIn:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.12549, 0.12549, 0.12549, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tesvd"]
_data = {
"Fade_In": SubResource("Animation_bsdhu"),
"RESET": SubResource("Animation_u50u7")
}

[node name="Title_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uk0m3")

[node name="Node2D" type="Node2D" parent="."]

[node name="TileMap" parent="Node2D" instance=ExtResource("2_p8oyj")]
position = Vector2(-951, 1456)
scale = Vector2(1.00053, 1)
tile_set = ExtResource("3_mm5at")
collision_visibility_mode = 0
layer_0/tile_data = PackedInt32Array(-655345, 131072, 0, -655344, 131072, 0, -655343, 131072, 0, -655342, 131072, 0, -655341, 131072, 0, -655340, 131072, 0, -655339, 131072, 0, -655338, 131072, 0, -655337, 131072, 0, -655336, 131072, 0, -589809, 0, 0, -524273, 0, 0, -458737, 0, 0, -393201, 0, 0, -589808, 0, 0, -524272, 0, 0, -458736, 0, 0, -393200, 0, 0, -589807, 0, 1, -524271, 0, 0, -458735, 0, 0, -393199, 0, 0, -589806, 0, 1, -524270, 0, 0, -458734, 0, 0, -393198, 0, 0, -589805, 0, 0, -524269, 0, 0, -458733, 0, 0, -393197, 0, 0, -589804, 0, 0, -524268, 0, 0, -458732, 0, 0, -393196, 0, 0, -589803, 0, 0, -524267, 0, 0, -458731, 0, 0, -393195, 0, 0, -589802, 0, 1, -524266, 0, 0, -458730, 0, 0, -393194, 0, 0, -589801, 0, 0, -524265, 0, 0, -458729, 0, 0, -393193, 0, 0, -589800, 0, 0, -524264, 0, 0, -458728, 0, 0, -393192, 0, 0, -589799, 0, 0, -524263, 0, 0, -458727, 0, 0, -393191, 0, 0, -589798, 0, 0, -524262, 0, 0, -458726, 0, 0, -393190, 0, 0, -589797, 0, 0, -524261, 0, 0, -458725, 0, 0, -393189, 0, 0, -589796, 0, 1, -524260, 0, 0, -458724, 0, 0, -393188, 0, 0, -589795, 0, 0, -524259, 0, 0, -458723, 0, 0, -393187, 0, 0, -589794, 0, 0, -524258, 0, 0, -458722, 0, 0, -393186, 0, 0, -589793, 0, 0, -524257, 0, 0, -458721, 0, 0, -393185, 0, 0, -589792, 0, 1, -524256, 0, 0, -458720, 0, 0, -393184, 0, 0, -589791, 0, 0, -524255, 0, 0, -458719, 0, 0, -393183, 0, 0, -589790, 0, 0, -524254, 0, 0, -458718, 0, 0, -393182, 0, 0, -655335, 131072, 0, -655334, 131072, 0, -655333, 131072, 0, -655332, 131072, 0, -655331, 131072, 0, -655330, 131072, 0, -655329, 131072, 0, -655328, 131072, 0, -655327, 131072, 0, -655326, 131072, 0, -589810, 0, 0, -458738, 0, 0, -524274, 0, 0, -393202, 0, 0, -1507314, 0, 0, -1441778, 0, 0, -1376242, 0, 0, -1310706, 0, 0, -1245170, 0, 0, -1179634, 0, 0, -1114098, 0, 0, -1048562, 0, 0, -983026, 0, 0, -917490, 0, 0, -851954, 0, 0, -786418, 0, 0, -1048534, 131072, 0, -1048533, 131072, 0, -1048532, 524288, 1, -1048535, 458752, 1, -720870, 589824, 9, -720871, 589824, 9, -720872, 589824, 9, -1114069, 720896, 0, -393181, 0, 0, -393180, 0, 0, -393179, 0, 0, -393178, 0, 0, -393177, 0, 0, -393176, 0, 0, -655325, 131072, 0, -655324, 131072, 0, -655323, 131072, 0, -655322, 131072, 0, -655321, 131072, 0, -655320, 196608, 0, -589789, 0, 0, -589788, 0, 1, -589787, 0, 0, -589786, 0, 0, -524249, 0, 0, -524248, 0, 0, -589784, 0, 1, -589785, 0, 0, -524253, 0, 0, -524252, 0, 0, -524251, 0, 0, -524250, 0, 0, -458713, 0, 0, -458714, 0, 0, -458715, 0, 0, -458716, 0, 0, -458717, 0, 0, -458712, 0, 0, -720864, 720896, 1, -1114068, 917504, 8, -720878, 720896, 0, -720873, 720896, 0, -1507283, 0, 0, -1441747, 0, 0, -1376211, 0, 0, -1310675, 0, 0, -1245139, 0, 0, -1179603, 0, 0, -1114067, 0, 0, -1048531, 0, 0, -982995, 0, 0, -917459, 0, 0, -851923, 0, 0, -786387, 0, 0, -720851, 0, 0, -655315, 0, 0, -589779, 0, 0, -524243, 0, 0, -458707, 0, 0, -393171, 0, 0)

[node name="Coins" type="Node2D" parent="Node2D"]

[node name="coin" parent="Node2D/Coins" instance=ExtResource("5_vlt85")]
position = Vector2(1821, 289)

[node name="coin2" parent="Node2D/Coins" instance=ExtResource("5_vlt85")]
position = Vector2(735, 651)

[node name="Enemies" type="Node2D" parent="Node2D"]

[node name="enemy" parent="Node2D/Enemies" instance=ExtResource("6_4c1oh")]
position = Vector2(882, 790)
direction = 1

[node name="enemy2" parent="Node2D/Enemies" instance=ExtResource("6_4c1oh")]
position = Vector2(1295, 795)
direction = 1

[node name="FlyEnemy" parent="Node2D/Enemies" instance=ExtResource("7_o3b0x")]
position = Vector2(1542, 462)

[node name="FlyEnemy2" parent="Node2D/Enemies" instance=ExtResource("7_o3b0x")]
position = Vector2(639, 542)

[node name="moving_background" parent="Node2D" instance=ExtResource("10_emons")]

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -867.0
offset_top = -516.0
offset_right = 583.0
offset_bottom = 315.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)

[node name="Logo" type="Label" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.239216, 0.576471, 0.870588, 1)
theme_override_fonts/font = ExtResource("2_bg8yp")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_3gdmq")
text = "Heavenly Knight
"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="NewGame" type="Button" parent="Menu/CenterRow/Buttons"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 0
flat = true
script = ExtResource("2_aboyv")
scene_to_load = "res://level_1.tscn"

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/NewGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(1, 0.6, 0.027451, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_bg8yp")
theme_override_font_sizes/font_size = 48
text = "Start Game
"

[node name="Options" type="Button" parent="Menu/CenterRow/Buttons"]
custom_minimum_size = Vector2(210, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0of38")
flat = true
script = ExtResource("2_aboyv")
scene_to_load = "res://optionMenu.tscn"

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(1, 0.6, 0.027451, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_bg8yp")
theme_override_font_sizes/font_size = 48
text = "Options
"

[node name="Exit" type="Button" parent="Menu/CenterRow/Buttons"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
size_flags_horizontal = 0
flat = true

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(1, 0.6, 0.027451, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_bg8yp")
theme_override_font_sizes/font_size = 48
text = "Exit
"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
layout_mode = 2
texture = ExtResource("3_a8bnj")

[node name="Label" type="Label" parent="Menu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bg8yp")
theme_override_font_sizes/font_size = 29
text = "Platformer 2D game build using Godot
version 1.0
"

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.12549, 0.12549, 0)
script = ExtResource("6_2db4k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_tesvd")
}

[connection signal="pressed" from="Menu/CenterRow/Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_fade_in_fade_finished"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_animation_player_animation_finished"]
